desktop nav list alignment fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -46,7 +46,7 @@ header nav[aria-expanded="true"] {
 }
 
 @media (width >= 1149px) {
-    header nav[aria-expanded="true"] > .section.nav-sections ul{
+    header nav[aria-expanded="true"] > .section.nav-sections ul ul{
         flex-direction: column;
         align-items: flex-start;
     }    
